--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,23 +2,5 @@
 # Makefile.am for snapper/examples
 #
 
-SUBDIRS = C
-
-INCLUDES = -I$(top_srcdir)
-
-LDADD = ../snapper/libsnapper.la
-
-noinst_PROGRAMS = List ListAll Create CmpDirs CreateTimeline SnapTest
-
-List_SOURCES = List.cc
-
-ListAll_SOURCES = ListAll.cc
-
-Create_SOURCES = Create.cc
-
-CmpDirs_SOURCES = CmpDirs.cc
-
-CreateTimeline_SOURCES = CreateTimeline.cc
-
-SnapTest_SOURCES = SnapTest.cc
+SUBDIRS = c c++-lib
 
