--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -10,9 +10,12 @@ LDADD = ../snapper/libsnapper.la
 
 noinst_SCRIPTS = run-all
 
-noinst_PROGRAMS = sysconfig-get1
+noinst_PROGRAMS = sysconfig-get1 dirname1 basename1
 
 sysconfig_get1_SOURCES = sysconfig-get1.cc common.h
+
+dirname1_SOURCES = dirname1.cc common.h
+basename1_SOURCES = basename1.cc common.h
 
 EXTRA_DIST = $(noinst_SCRIPTS) sysconfig-get1.txt
 
