--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -9,7 +9,7 @@ man_MANS += pam_snapper.8
 endif
 
 .xml.8: .xml
-	$(XSLTPROC) -nonet http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
+	$(XSLTPROC) --nonet http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
 
 TXTS = dbus-protocol.txt
 
@@ -18,8 +18,8 @@ EXTRA_DIST = $(TXTS)
 html: $(man_MANS:%.8=%.html)
 
 .xml.html: .xml
-	$(XSLTPROC) -nonet http://docbook.sourceforge.net/release/xsl/current/html/docbook.xsl $< > $@
+	$(XSLTPROC) --nonet http://docbook.sourceforge.net/release/xsl/current/html/docbook.xsl $< > $@
 
 clean-local:
-	rm -f *.8 manpage.* *.html
+	rm -f *.8 *.html
 
