--- a/configure.ac
+++ b/configure.ac
@@ -135,6 +135,7 @@ AC_OUTPUT(
 	doc/Makefile
 	doc/snapper.xml:doc/snapper.xml.in
 	doc/snapperd.xml:doc/snapperd.xml.in
+	doc/snapper-configs.xml:doc/snapper-configs.xml.in
 	doc/pam_snapper.xml:doc/pam_snapper.xml.in
 	po/Makefile
 	testsuite/Makefile
