--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,9 +1,12 @@
 snapper.xml
 snapperd.xml
+snapper-configs.xml
 pam_snapper.xml
 snapper.8
 snapperd.8
+snapper-configs.5
 pam_snapper.8
 snapper.html
 snapperd.html
+snapper-configs.html
 pam_snapper.html
