--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -2,16 +2,19 @@
 # Makefile.am for snapper/doc
 #
 
-man_MANS = snapper.8 snapperd.8
+man_MANS = snapper.8 snapperd.8 snapper-configs.5
 
 if HAVE_PAM
 man_MANS += pam_snapper.8
 endif
 
+.xml.5: .xml
+	$(XSLTPROC) --nonet manpages.xsl $<
+
 .xml.8: .xml
 	$(XSLTPROC) --nonet manpages.xsl $<
 
-html: $(man_MANS:%.8=%.html)
+html: $(man_MANS:%.5=%.html) $(man_MANS:%.8=%.html)
 
 .xml.html: .xml
 	$(XSLTPROC) --nonet html.xsl $< > $@
@@ -19,5 +22,5 @@ html: $(man_MANS:%.8=%.html)
 EXTRA_DIST = dbus-protocol.txt manpages.xsl html.xsl
 
 clean-local:
-	rm -f *.8 *.html
+	rm -f *.{5,8} *.html
 
