--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -67,7 +67,7 @@ autoconf
 
 ./configure --libdir=%{_libdir} --prefix=%{prefix} --mandir=%{_mandir}		\
 	--docdir=%{prefix}/share/doc/packages/snapper				\
-	--disable-silent-rules --disable-ext4 --enable-xattrs
+	--disable-silent-rules --disable-ext4
 make %{?jobs:-j%jobs}
 
 %install
