YCP Killer: Apply changes needed for Ruby translation
This module needed few changes before it was possible to translate its
YCP files into Ruby. This commit performs them.

The commit is a result of running YCP Killer's "patch" command. The
history of the applied patch is available here:

  https://github.com/yast/ycp-killer/commits/master/patches/snapper.patch

See also:

  https://github.com/yast/ycp-killer

--- a/yast2-snapper.spec.in
+++ b/yast2-snapper.spec.in
@@ -8,6 +8,8 @@ BuildRequires:	libsnapper-devel >= 0.0.11
 BuildRequires:	yast2-core-devel >= 2.23.1
 BuildRequires:	libtool doxygen gcc-c++ perl-XML-Writer
 
+Requires:       yast2-ruby-bindings >= 1.0.0
+
 Summary:	YaST - file system snapshots review
 
 %description
@@ -25,7 +27,7 @@ YaST module for accessing and managing btrfs system snapshots
 %defattr(-,root,root)
 %dir @yncludedir@/snapper
 @yncludedir@/snapper/*
-@clientdir@/snapper.ycp
+@clientdir@/snapper.rb
 @moduledir@/Snapper.*
 @desktopdir@/snapper.desktop
 @scrconfdir@/*.scr
