- moved btrfs ioctl calls to separate file

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -36,7 +36,8 @@ libsnapper_la_SOURCES =					\
 
 if ENABLE_BTRFS
 libsnapper_la_SOURCES +=				\
-	Btrfs.cc		Btrfs.h
+	Btrfs.cc		Btrfs.h			\
+	BtrfsUtils.cc		BtrfsUtils.h
 endif
 
 if ENABLE_EXT4
