--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -16,34 +16,41 @@
 #
 
 
-Name:		snapper
-Version:	@VERSION@
-Release:	0
-License:	GPL-2.0
-Group:		System/Packages
-BuildRoot:	%{_tmppath}/%{name}-%{version}-build
-Source:		snapper-%{version}.tar.bz2
-Prefix:		/usr
-BuildRequires:	boost-devel gcc-c++ libtool libxml2-devel pkg-config
+Name:           snapper
+Version:        @VERSION@
+Release:        0
+BuildRoot:      %{_tmppath}/%{name}-%{version}-build
+Source:         snapper-%{version}.tar.bz2
+Prefix:         /usr
+BuildRequires:  boost-devel
+BuildRequires:  gcc-c++
+BuildRequires:  libtool
+BuildRequires:  libxml2-devel
+BuildRequires:  pkg-config
 %if ! 0%{?mandriva_version}
-BuildRequires:	dbus-1-devel
-BuildRequires:	libxslt docbook-xsl-stylesheets
+BuildRequires:  dbus-1-devel
+BuildRequires:  docbook-xsl-stylesheets
+BuildRequires:  libxslt
 %else
-BuildRequires:	libdbus-1-devel
-BuildRequires:	xsltproc docbook-dtd45-xml docbook-xsl
+BuildRequires:  docbook-dtd45-xml
+BuildRequires:  docbook-xsl
+BuildRequires:  libdbus-1-devel
+BuildRequires:  xsltproc
 %endif
 %if (0%{?suse_version} && 0%{?suse_version} >= 1210)
-BuildRequires:	libzypp(plugin:commit)
+BuildRequires:  libzypp(plugin:commit)
 %endif
-BuildRequires:	pam-devel
-Requires:	libsnapper@LIBVERSION_MAJOR@ = %version
-Requires:	diffutils
+BuildRequires:  pam-devel
+Requires:       diffutils
+Requires:       libsnapper@LIBVERSION_MAJOR@ = %version
 %if 0%{?suse_version}
-Recommends:	cron logrotate snapper-zypp-plugin
-Supplements:	btrfsprogs
+Recommends:     cron logrotate snapper-zypp-plugin
+Supplements:    btrfsprogs
 %endif
-Summary:	Tool for filesystem snapshot management
-Url:		http://snapper.io/
+Summary:        Tool for filesystem snapshot management
+License:        GPL-2.0
+Group:          System/Packages
+Url:            http://snapper.io/
 
 %description
 This package contains snapper, a tool for filesystem snapshot management.
@@ -100,11 +107,11 @@ rm -rf "$RPM_BUILD_ROOT"
 %{prefix}/share/dbus-1/system-services/org.opensuse.Snapper.service
 
 %package -n libsnapper@LIBVERSION_MAJOR@
-Summary:	Library for filesystem snapshot management
-Group:		System/Libraries
-Requires:	util-linux
+Summary:        Library for filesystem snapshot management
+Group:          System/Libraries
+Requires:       util-linux
 %if 0%{?suse_version}
-PreReq:		%fillup_prereq
+PreReq:         %fillup_prereq
 %endif
 
 %description -n libsnapper@LIBVERSION_MAJOR@
@@ -142,10 +149,13 @@ Authors:
 /sbin/ldconfig
 
 %package -n libsnapper-devel
-Requires:	libsnapper@LIBVERSION_MAJOR@ = %version
-Requires:	gcc-c++ libstdc++-devel boost-devel libxml2-devel
-Summary:	Header files and documentation for libsnapper
-Group:		Development/Languages/C and C++
+Requires:       boost-devel
+Requires:       gcc-c++
+Requires:       libsnapper@LIBVERSION_MAJOR@ = %version
+Requires:       libstdc++-devel
+Requires:       libxml2-devel
+Summary:        Header files and documentation for libsnapper
+Group:          Development/Languages/C and C++
 
 %description -n libsnapper-devel
 This package contains header files and documentation for developing with
@@ -162,10 +172,12 @@ Authors:
 %{prefix}/include/snapper
 
 %package -n snapper-zypp-plugin
-Requires:	snapper = %version
-Requires:	libzypp(plugin:commit) zypp-plugin-python dbus-1-python
-Summary:	A zypp commit plugin for calling snapper
-Group:		System/Packages
+Requires:       dbus-1-python
+Requires:       snapper = %version
+Requires:       zypp-plugin-python
+Requires:       libzypp(plugin:commit)
+Summary:        A zypp commit plugin for calling snapper
+Group:          System/Packages
 
 %description -n snapper-zypp-plugin
 This package contains a plugin for zypp that makes filesystem snapshots with
@@ -185,10 +197,10 @@ Authors:
 /usr/lib/zypp/plugins/commit/snapper.py*
 
 %package -n pam_snapper
-Requires:	snapper = %version
-Requires:	pam
-Summary:	PAM module for calling snapper
-Group:		System/Packages
+Requires:       pam
+Requires:       snapper = %version
+Summary:        PAM module for calling snapper
+Group:          System/Packages
 
 %description -n pam_snapper
 A PAM module for calling snapper during user login and logout.
