- added example/test program

--- a/examples/c++-lib/Makefile.am
+++ b/examples/c++-lib/Makefile.am
@@ -6,7 +6,7 @@ INCLUDES = -I$(top_srcdir)
 
 LDADD = ../../snapper/libsnapper.la
 
-noinst_PROGRAMS = List ListAll Create CmpDirs CreateTimeline SnapTest
+noinst_PROGRAMS = List ListAll Create CmpDirs CreateNumber CreateTimeline SnapTest
 
 List_SOURCES = List.cc
 
@@ -15,6 +15,8 @@ ListAll_SOURCES = ListAll.cc
 Create_SOURCES = Create.cc
 
 CmpDirs_SOURCES = CmpDirs.cc
+
+CreateNumber_SOURCES = CreateNumber.cc
 
 CreateTimeline_SOURCES = CreateTimeline.cc
 
