- enable compiler warning

--- a/pam/Makefile.am
+++ b/pam/Makefile.am
@@ -4,7 +4,7 @@
 
 if HAVE_PAM
 
-AM_CFLAGS = -D_GNU_SOURCE
+AM_CFLAGS = -D_GNU_SOURCE -Wwrite-strings
 
 INCLUDES = -I$(top_srcdir) $(DBUS_CFLAGS)
 
