- allow to configure snapshotting from zypp-plugin depending on package list (fate#316203)

--- a/configure.ac
+++ b/configure.ac
@@ -144,6 +144,8 @@ AC_OUTPUT(
 	doc/snapper.xml:doc/snapper.xml.in
 	doc/snapperd.xml:doc/snapperd.xml.in
 	doc/snapper-configs.xml:doc/snapper-configs.xml.in
+	doc/snapper-zypp-plugin.xml:doc/snapper-zypp-plugin.xml.in
+	doc/snapper-zypp-plugin.conf.xml:doc/snapper-zypp-plugin.conf.xml.in
 	doc/pam_snapper.xml:doc/pam_snapper.xml.in
 	po/Makefile
 	testsuite/Makefile
