--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -1,12 +1,18 @@
 snapper.xml
 snapperd.xml
 snapper-configs.xml
+snapper-zypp-plugin.xml
+snapper-zypp-plugin.conf.xml
 pam_snapper.xml
 snapper.8
 snapperd.8
 snapper-configs.5
+snapper-zypp-plugin.8
+snapper-zypp-plugin.conf.5
 pam_snapper.8
 snapper.html
 snapperd.html
 snapper-configs.html
+snapper-zypp-plugin.html
+snapper-zypp-plugin.conf.html
 pam_snapper.html
