- allow patterns to be regexs

--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -2,16 +2,16 @@
 <snapper-zypp-plugin-conf>
 
   <!-- List of solvables. If the zypp commit transaction includes any solvable
-       listed below, snapper will create pre and post snapshots. If any of the
-       solvables is marked as important, the snapshots will also be marked as
-       important. The solvables names are matched with Unix shell-style
-       wildcards. -->
+       listed below, snapper will create pre and post snapshots. The match
+       attribute defines whether the pattern is a Unix shell-style wildcard
+       ("w") or a regular expression ("re"). If any of the solvables is marked
+       as important, the snapshots will also be marked as important. -->
   <solvables>
-    <solvable important="true">kernel-*</solvable>
-    <solvable important="true">glibc</solvable>
-    <solvable important="true">systemd</solvable>
-    <solvable important="true">udev</solvable>
-    <solvable>*</solvable>
+    <solvable match="w" important="true">kernel-*</solvable>
+    <solvable match="w" important="true">glibc</solvable>
+    <solvable match="w" important="true">systemd</solvable>
+    <solvable match="w" important="true">udev</solvable>
+    <solvable match="w">*</solvable>
   </solvables>
 
 </snapper-zypp-plugin-conf>
