--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -4,8 +4,8 @@
   <!-- List of solvables. If the zypp commit transaction includes any solvable
        listed below, snapper will create pre and post snapshots. The match
        attribute defines whether the pattern is a Unix shell-style wildcard
-       ("w") or a regular expression ("re"). If any of the solvables is marked
-       as important, the snapshots will also be marked as important. -->
+       ("w") or a regular expression ("re"). If any of the matching solvables
+       is marked as important, the snapshots are also marked as important. -->
   <solvables>
     <solvable match="w" important="true">kernel-*</solvable>
     <solvable match="w" important="true">glibc</solvable>
