- added more important solvables

--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -8,6 +8,7 @@
        is marked as important, the snapshots are also marked as important. -->
   <solvables>
     <solvable match="w" important="true">kernel-*</solvable>
+    <solvable match="w" important="true">mkinitrd</solvable>
     <solvable match="w" important="true">glibc</solvable>
     <solvable match="w" important="true">systemd</solvable>
     <solvable match="w" important="true">udev</solvable>
