--- a/configure.ac
+++ b/configure.ac
@@ -19,8 +19,7 @@ AC_CONFIG_HEADERS(config.h)
 AC_DISABLE_STATIC
 
 AC_PROG_CXX
-AC_PROG_LIBTOOL
-AM_PROG_LIBTOOL
+LT_INIT
 
 AC_PREFIX_DEFAULT(/usr)
 
